[package]
name = "media-lake"
version = "0.1.0"
edition = "2021"

[features]
default = []
opencv = ["dep:opencv"]

[dependencies]
chrono = "0.4.38"
image = "0.25.0"
imageproc = "0.23.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.112"
opencv = { version = "0.88.3", features = ["clang-runtime"], optional = true }
log = "0.4.20"
env_logger = "0.10.1"
plotters = "0.3.5"
colorous = "1.0.10"
regex = "1.10.3"
rayon = "1.8.0"
dashmap = "5.5.3"
parking_lot = "0.12.1"
